--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ina219",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "Node.js INA219 driver for Adafruit INA219 High Side DC Current Sensor",
   "main": "ina219.js",
   "author": "Brett Marl",
@@ -10,7 +10,7 @@
   },
   "license": "MIT",
   "dependencies": {
-    "i2c":"0.2.0"
+    "i2c-bus":"1.0.0"
   },
   "keywords": [
   "raspberry",
@@ -20,6 +20,7 @@
   "current",
   "monitor",
   "ina219",
+  "i2c-bus",
   "i2c"
 ],
   "engine": "node >= 0.12.0"
